fix contrast on restaurant page

--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #0468bd;
     text-decoration: none;
 }
 
@@ -283,7 +283,7 @@ nav h1 a {
   }
 }
 #restaurant-name {
-  color: #f18200;
+  color: #ca6d01;
   font-family: Arial,sans-serif;
   font-size: 20pt;
   font-weight: 200;
@@ -357,7 +357,7 @@ nav h1 a {
   }
 }
 #reviews-container h2 {
-  color: #f58500;
+  color: #ca6d01;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
